# voice-assistant

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/voice_assistant/: __init__.py  asr.py  audio.py  llm.py  main.py  tts.py  ui.py  web.py
src/voice_assistant/static/: app.js  style.css
src/voice_assistant/templates/: index.html
