[project]
name = "voice-assistant"
version = "0.1.0"
description = "Local voice assistant: ASR (faster-whisper) + LLM (Ollama) + TTS (kokoro/pyttsx3)"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "pyttsx3>=2.90",
    "webrtcvad>=2.0.10",
    "scipy>=1.12.0",
    "setuptools>=82.0.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
    "soundfile>=0.13.1",
    "jinja2>=3.1.6",
    "edge-tts>=7.2.7",
    "dashscope>=1.25.13",
]

[project.optional-dependencies]
kokoro = [
    "kokoro-onnx>=0.3.0",
    "soundfile>=0.12.0",
]

[project.scripts]
voice-assistant = "voice_assistant.main:main"
voice-assistant-web = "voice_assistant.web:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_assistant"]
